# wth-baymax

./: .gitignore  README.md  dev.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
src/: app.py  model.py
